07_retirement/grade.txt
Grading at Sat Jul 25 13:21:28 UTC 2020
Attempting to compile retirement.c
retirement.c:9:9: error: unknown type name ‘_retire_info’
 typedef _retire_info  retire_info;
         ^
retirement.c: In function ‘profitCount’:
retirement.c:12:35: error: request for member ‘rate_of_return’ in something not a structure or union
   double percentToCount = (savings.rate_of_return/100)/12;
                                   ^
retirement.c:14:51: error: request for member ‘contribution’ in something not a structure or union
   double moneyPerMonth = saved + initial + savings.contribution;
                                                   ^
retirement.c: In function ‘retirement’:
retirement.c:23:29: error: request for member ‘months’ in something not a structure or union
   for(int i = 0; i < working.months; i++){
                             ^
retirement.c:33:29: error: request for member ‘months’ in something not a structure or union
   for(int i = 0; i < retired.months - 1; i++){
                             ^
retirement.c: In function ‘main’:
retirement.c:49:7: error: request for member ‘months’ in something not a structure or union
   work.months = 489;
       ^
retirement.c:50:7: error: request for member ‘contribution’ in something not a structure or union
   work.contribution = 1000;
       ^
retirement.c:51:7: error: request for member ‘rate_of_return’ in something not a structure or union
   work.rate_of_return = 4.5;
       ^
retirement.c:54:7: error: request for member ‘months’ in something not a structure or union
   rett.months = 384;
       ^
retirement.c:55:7: error: request for member ‘contribution’ in something not a structure or union
   rett.contribution = -4000;
       ^
retirement.c:56:7: error: request for member ‘rate_of_return’ in something not a structure or union
   rett.rate_of_return = 1;
       ^
The code did not compile!

Overall Grade: F
